--- a/src/pages/CartPage.css
+++ b/src/pages/CartPage.css
@@ -7,7 +7,7 @@
   align-items: center;
   padding: 2rem 1rem;
   font-family: 'Arial', sans-serif;
-  background-color: #f9f9f9;
+  background-color: #0e0d0d;
   min-height: 100vh;
 }
 
