--- a/src/pages/ServePage.css
+++ b/src/pages/ServePage.css
@@ -1,7 +1,7 @@
 /* ServePage.css */
 body {
   font-family: "Poppins", sans-serif;
-  background: #1d1c1c;
+  background: #fafafa;
   margin: 0;
   padding: 0;
 }
